2003-05-29  Not Zed  <NotZed@Ximian.com>

	* Makefile.am (BUILT_SOURCES): added server_DATA (*.server) so
	make clean works.  For #42691.

2003-05-30  Radek Doulik  <rodo@ximian.com>

	* mail-config.c (config_write_style): use %02x instead of %2x when
	formatting color for rc file

2003-05-29  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes bug #43805.

	* mail-session.c (session_system_beep): Proxy the gdk_beep() call
	to the main thread.
	(session_play_sound): Proxy the gnome_sound_play() call to the
	main thread.

2003-05-27  Not Zed  <NotZed@Ximian.com>

	* message-tag-editor.c (message_tag_editor_init): set the default
	open size to something reasonable.  For #43410.

	* mail-signature-editor.c (d): turn off debugging.

	* mail-config.c (mail_config_signature_add): save new signature in
	signature list.  For #43688.

2003-05-21  Radek Doulik  <rodo@ximian.com>

	* mail-signature-editor.c (menu_file_save_cb): set signature html
	flag even if it's newly signature, we don't set it in
	format_html_cb as sig could be "live" (when it's not new one)

2003-05-20  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-importer.c: Updated copyright years.

	* mail-callbacks.c (ask_confirm_for_empty_subject): Fixed the
	logic a bit - if the gconf key *isn't* set, we want to return
	TRUE.

	* mail-search.c (mail_search_finalise): We need to weak_unref()
	the mail-display here. Fixes bug #43392.

2003-05-21  Larry Ewing  <lewing@ximian.com>

	* mail-config.glade: remove link hilighting option that isn't
	attached to anything.

2003-05-20  Larry Ewing  <lewing@ximian.com>

	* mail-display.c: filter notification events to keep the redisplay
	count down.

	* mail-composer-prefs.c: remove references to gtkhtml property
	manager.  Connect to missing settings.

	* mail-preferences.c: remove references to gtkhtml property
	manager.  Connect to missing settings.

	* mail-config.glade: remove keybinding setting.

	* mail-display.c (mail_display_destroy): remove notification.